增加轮播图

--- a/src/pages/ui/ui.less
+++ b/src/pages/ui/ui.less
@@ -6,6 +6,7 @@
 }
 
 /** Modal */
+
 .vertical-center-modal {
     text-align: center;
     white-space: nowrap;
@@ -26,3 +27,23 @@
     text-align: left;
 }
 
+/** For Carousel*/
+
+.ant-carousel .slick-slide {
+    text-align: center;
+    height: 160px;
+    line-height: 160px;
+    background: #364d79;
+    overflow: hidden;
+}
+
+.ant-carousel .slick-slide h3 {
+    color: #fff;
+}
+
+.slider-wrap .ant-carousel .slick-slide {
+    height: 350px !important;
+    img {
+        width: 100%
+    }
+}
