基础表单完成

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -2,8 +2,9 @@
 .nav-left {
     color: @ColorA;
 } */
-@import './default.less';
 
+@import './default.less';
+@import './loading.less';
 .container {
     display: flex;
     .nav-left {
@@ -18,8 +19,8 @@
         background: @colorL;
         overflow: auto;
     }
-    .content{
+    .content {
         position: relative;
-        padding:20px;
+        padding: 20px;
     }
 }
